--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ android:
     - tools
     - tools
 before_script:
-  - cp library/google-services.json proguard-tests/google-services.json
+  - cp app/google-services.json proguard-tests/google-services.json
 script:
   - ./gradlew clean
   - ./gradlew assembleDebug proguard-tests:build check
