--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,51 @@
-# https://docs.travis-ci.com/user/languages/android
+sudo: false
 language: android
 jdk: oraclejdk8
-# Container builds don't have enough memory to reliably finish without being
-# killed, so pretend sudo is required so we don't use the container infra.
-# See: https://github.com/travis-ci/travis-ci/issues/5582
-sudo: required
-
-env:
-    global:
-        - ADB_INSTALL_TIMEOUT=10 # Default is 2 minutes, bump to 10
-
-# "avoid uploading the cache after every build"
 before_cache:
-    - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-    - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+ - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+ - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
-    directories:
-        - $HOME/.gradle/caches/
-        - $HOME/.gradle/wrapper/
-        - $HOME/.android/build-cache
-
-before_install:
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55\nd56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
-  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd\n504667f4c0de7af1a06de9f4b1727b84351f2910" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+ directories:
+ - $HOME/.gradle/caches/
+ - $HOME/.gradle/wrapper/
+env:
+  global:
+   - ANDROID_API_LEVEL=25
+   - EMULATOR_API_LEVEL=21
+   - ANDROID_BUILD_TOOLS_VERSION=25.0.2
+   - ANDROID_ABI=google_apis/armeabi-v7a
+   - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 
 android:
   components:
-    # https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943
     - tools
-    - tools
+    - platform-tools
+    - build-tools-25.0.2
+    - android-25
+    - extra-google-m2repository
+    - extra-android-m2repository
+    # Google Play Services
+    - extra-google-google_play_services
+    # Support library
+    - extra-android-support
 
-# Download emulator images: https://developer.android.com/studio/command-line/sdkmanager.html
-before_script: >
-  echo y | ${ANDROID_HOME}tools/bin/sdkmanager --channel=3
-  "system-images;android-16;default;armeabi-v7a" "system-images;android-17;default;armeabi-v7a"
-  "system-images;android-18;default;armeabi-v7a" "system-images;android-19;default;armeabi-v7a"
-  "system-images;android-21;default;armeabi-v7a"
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+    - addon-google_apis-google-$EMULATOR_API_LEVEL
+
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+before_script:
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 script:
-    # Build the library + run unit tests, run device tests, build the test app
-    - ./gradlew jobdispatcher:build app:assemble
+        - ./gradlew clean
+        - ./gradlew assembleDebug
+        - ./gradlew assembleDebugAndroidTest
+before_install:
+          - mkdir "$ANDROID_HOME/licenses" || true
+          - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+          - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+          - chmod +x gradlew
