--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: android
 jdk: oraclejdk8
 before_cache:
@@ -11,9 +10,9 @@ cache:
  - $HOME/.gradle/wrapper/
 env:
   global:
-   - ANDROID_API_LEVEL=25
-   - EMULATOR_API_LEVEL=21
-   - ANDROID_BUILD_TOOLS_VERSION=25.0.2
+   - ANDROID_API_LEVEL=29
+   - EMULATOR_API_LEVEL=29
+   - ANDROID_BUILD_TOOLS_VERSION=29.0.3
    - ANDROID_ABI=google_apis/armeabi-v7a
    - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 
@@ -21,8 +20,8 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.2
-    - android-25
+    - build-tools-29.0.3
+    - android-29
     - extra-google-m2repository
     - extra-android-m2repository
     # Google Play Services
@@ -36,14 +35,14 @@ android:
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
         - ./gradlew clean
-        - ./gradlew assembleDebug
-        - ./gradlew assembleDebugAndroidTest
+        - ./gradlew app:assembleDebug -PdisablePreDex;
+        - ./gradlew app:assembleDebugAndroidTest -PdisablePreDex;
 before_install:
           - mkdir "$ANDROID_HOME/licenses" || true
           - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
