--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ android:
     - tools
     - platform-tools
     - android-28
+    - build-tools-28.0.3
     - extra-google-m2repository
     - extra-android-m2repository
     # Google Play Services
