Functionalities - Added full notifications support Resources - Fixed all missing strings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".event.EditEventActivity" />
         <activity android:name=".event.CreateEventActivity" />
-        <activity android:name=".event.EventActivity">
-        </activity>
+        <activity android:name=".event.EventActivity"/>
+        <activity android:name=".profile.ProfileOtherActivity"/>
         <activity
             android:name=".profile.ProfileActivity"
             android:label="Profile"
