--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".event.EditEventActivity" />
-        <activity android:name=".event.CreateEventActivity" />
+        <activity android:name=".event.EditEventActivity"
+            android:noHistory="true"/>
+        <activity android:name=".event.CreateEventActivity"
+            android:noHistory="true"/>
         <activity android:name=".event.EventActivity"/>
         <activity android:name=".profile.ProfileOtherActivity"/>
         <activity
