--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity
             android:name=".auth.signup.SignupActivity"
             android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:noHistory="true"/>
         <activity
             android:name=".auth.login.LoginActivity"
             android:label="@string/title_activity_login"
@@ -37,7 +38,8 @@
         <activity
             android:name=".auth.login.LoginForgotPasswordActivity"
             android:label="@string/title_activity_login_popup"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:noHistory="true"/>
         <activity
             android:name=".MainActivity"
             android:noHistory="true">
